--- a/style.css
+++ b/style.css
@@ -40,28 +40,10 @@ h1{
     width: 100%; 
     margin: 1rem;
 }
-.presentation-section h1{
+.presentation h1{
     font-family: Arial, Helvetica, sans-serif;
     margin: 1rem;
     
-}
-
-.presentation-section .logo{
-    border-radius: 20px;
-    border: 12px solid #f39810;
-    width: 230px;
-    height: 230px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-}
-
-.presentation-section .logo h1{
-    
-    font-size: 280px !important;
-    font-weight: bold;
-    color: #fff;
 }
 
 .srl{
@@ -330,19 +312,7 @@ h1 span:nth-child(5){
         margin-top: 0;
     }
 
-    .presentation-section .logo{
-        
-        width: 180px;
-        height: 180px;
-        
-        
-    }
-    
-    .presentation-section .logo h1{
-        
-        font-size: 200px !important;
-        
-    }
+   
 }
 
 @media (max-width:400px){
@@ -365,19 +335,7 @@ h1 span:nth-child(5){
         margin-top: 0;
     }
 
-    .presentation-section .logo{
-        
-        width: 130px;
-        height: 130px;
-        
-        
-    }
     
-    .presentation-section .logo h1{
-        
-        font-size: 140px !important;
-        
-    }
     
 }
 
