--- a/style.css
+++ b/style.css
@@ -54,6 +54,8 @@ h1{
     align-items: center;
     justify-content: center;
     border-radius: 8px;
+    animation: animateSRL 2s linear infinite;
+    
 }
 
 .presentation h1 span{
@@ -96,6 +98,18 @@ h1 span:nth-child(5){
         filter: blur(0px);
         text-shadow:none;
         transform: translateY(0px);
+    }    
+}
+
+@keyframes animateSRL {
+    0%{
+        box-shadow: 0 0 10px #f39810,
+        0 0 20px #f39810,
+        0 0 40px #f39810;
+        
+    }
+    100%{
+        box-shadow: none;
     }    
 }
 
@@ -171,7 +185,7 @@ h1 span:nth-child(5){
 
 
 .menu-section{
-    width: 100%;
+    width: 95%;
     height: fit-content;
     display: flex;
     flex-direction: column;
@@ -187,7 +201,47 @@ h1 span:nth-child(5){
     width: 100%;
     height: 100px;
     position: relative;
+    flex-direction: column;
 }
+
+.menu-section .slider-category-container{
+    width: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+}
+.menu-section .slider-category{
+    
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    flex-direction: row;
+    
+    list-style: none;
+    overflow: auto;
+    cursor: pointer;
+}
+
+.menu-section .slider-category li{
+    padding-left: 1rem;
+    text-align: center;
+    min-width:100px;
+}
+
+.menu-section .slider-category li a{
+    color: #f39810c0
+}
+
+.menu-section .slider-category li:hover a,
+.menu-section .slider-category li:active a,
+.menu-section .slider-category li:focus a{
+        color: #f39810;
+        text-shadow: 0 0 10px #f39810;
+}
+
+
 
 .menu-section .line{
     
@@ -202,7 +256,8 @@ h1 span:nth-child(5){
     font-size: 55px;
     color: #f39810;
     background: #000;
-    padding-bottom: 1rem;
+    height: 40px;
+    padding-bottom: 3rem;
 }
 
 
@@ -311,7 +366,9 @@ h1 span:nth-child(5){
         height: 80px;
         margin-top: 0;
     }
-
+    .menu-section .slider-category-container{
+        width: 95%;
+    }
    
 }
 
