--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ body{
     align-items: center;
     font-family: 'Bad Script', cursive;
     background: #000;
+    background-blend-mode: hard-light;
+    background-image: linear-gradient(rgba(6, 6, 6, 0.9), rgba(0, 0, 0, 0.9)),
+      url(https://images.pexels.com/photos/1227515/pexels-photo-1227515.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
+    background-blend-mode: hard-light;
 }
 
 h1{
@@ -83,7 +87,7 @@ h1 span:nth-child(5){
 
 @keyframes animate {
     0%,100%{
-        color: #fff;
+        color: #ffffff;
         filter: blur(2px);
         text-shadow: 0 0 10px #f39810,
         0 0 20px #f39810,
@@ -94,7 +98,7 @@ h1 span:nth-child(5){
         /* 00b3ff */
     }
     15%,85%{
-        color: #111;
+        color: #313030;
         filter: blur(0px);
         text-shadow:none;
         transform: translateY(0px);
@@ -114,74 +118,6 @@ h1 span:nth-child(5){
 }
 
 
-.neon-container{
-    display: flex;
-    position: relative;
-    width: 150px;
-    margin: 3em;
-    justify-content: center;
-    height:120px;
-    overflow: hidden;
-    
-}
-
-.neon{
-    position: absolute;
-    font-size: 70px;
-    color: transparent;
-    background: #000;
-    width: 150px;
-    height: 120px;
-   
-    
-    
-    
-}
-
-.neon::after, .neon::before{
-    content: attr(data-text);
-    padding-left: 20px;
-    color: #fff;
-    filter: blur(0.01em);
-    position: absolute;
-    top: 0;
-    left: 0;
-    border-radius: 24px;
-}
-
-.neon::after{
-    mix-blend-mode: difference;
-}
-
-.gradient, .shimmer{
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 10px;
-}
-
-.gradient{
-    background: linear-gradient(45deg, #f39810 , #f39810);
-    mix-blend-mode: multiply;
-}
-
-.shimmer{
-    background:radial-gradient(circle, #fff,transparent 25% ) 0 0/10% 10%,
-    radial-gradient(circle,#fff ,#000 25%) 50% 50%/12.5% 12.5%;
-    top: -40%;
-    left: -40%;
-    mix-blend-mode: color-dodge;
-    animation: shimmering 6s infinite linear;
-    
-}
-
-@keyframes shimmering{
-    100%{
-        transform: translate3d(30%,30%,0);
-    }
-}
 
 
 .menu-section{
@@ -194,15 +130,7 @@ h1 span:nth-child(5){
     overflow: hidden;
 }
 
-.menu-section .line-menu{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100px;
-    position: relative;
-    flex-direction: column;
-}
+
 
 .menu-section .slider-category-container{
     width: 70%;
@@ -241,7 +169,15 @@ h1 span:nth-child(5){
         text-shadow: 0 0 10px #f39810;
 }
 
-
+.menu-section .line-menu{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100px;
+    position: relative;
+    flex-direction: row;
+}
 
 .menu-section .line{
     
@@ -252,11 +188,10 @@ h1 span:nth-child(5){
 
 
 .line-menu h1{
-    position: absolute;
+    position: relative;
     font-size: 55px;
-    color: #f39810;
-    background: #000;
-    height: 40px;
+    color: #f39810;    
+    height: 60px;
     padding-bottom: 3rem;
 }
 
